Rename The Class Library Project
Name of class library Hermes.Library was changed to Hermes. I did this to shorten the namespaces. The original project name would generate namespaces that reminds Hungarian notation.
And I just find it disgusting.

--- a/Hermes.WinFormsUI/Hermes.WinFormsUI.csproj
+++ b/Hermes.WinFormsUI/Hermes.WinFormsUI.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Hermes.Library\Hermes.Library.csproj" />
+    <ProjectReference Include="..\Hermes.Library\Hermes.csproj" />
   </ItemGroup>
 
 </Project>
